# Front/apidoc.json
@@ -1980,7 +1980,7 @@
         }
       }
     },
-    "/api/Order/details/{id}": {
+    "/api/Order/{id}": {
       "get": {
         "tags": [
           "Order"
@@ -2001,9 +2001,7 @@
             "description": "OK"
           }
         }
-      }
-    },
-    "/api/Order/{id}": {
+      },
       "put": {
         "tags": [
           "Order"
